--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,67 @@
       <a ui-sref-active="active" ui-sref="profile">Profile</a>
     </nav>
 
+
+    <div class="container">
+      <div class="jumbotron text-center">
+        <h1>Welcome, Visitor!</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              New Here?
+            </div>
+
+            <div class="panel-body">
+              <p>Fill out the form below to create an account:</p>
+
+              <form action="/signup" method="post">
+                <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input type="text" name="username" class="form-control">
+                </div>
+
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input type="password" name="password" class="form-control">
+                </div>
+
+                <input type="submit" value="Sign Up" class="btn btn-success">
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              Already have an account?
+            </div>
+
+            <div class="panel-body">
+              <p>Login:</p>
+
+              <form action="/login" method="post">
+                <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input type="text" name="username" class="form-control">
+                </div>
+
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input type="password" name="password" class="form-control">
+                </div>
+
+                <input type="submit" value="Log In" class="btn btn-default">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   <section ui-view>
 
 
