added final routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,8 @@
   <body>
     <nav class="tabs">
       <a ui-sref-active="active" ui-sref="home">Home</a>
-      <a ui-sref-active="active" ui-sref="login">Login</a>
-      <a ui-sref-active="active" ui-sref="signup">SignUp</a>
-      <a ui-sref-active="active" ui-sref="profile">Profile</a>
+      <a ui-sref-active="active" ui-sref="search">Search</a>
+      <a ui-sref-active="active" ui-sref="signup"></a>
     </nav>
 
   <section ui-view>
