--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,94 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: #00B7FF;
+.container {
+  margin: 1.5rem;
+}
+
+header {
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
+  margin-bottom: 1.618rem;
+}
+
+header.navbar {
+  border-radius: 0;
+}
+
+h1 {
+  font-weight: bold;
+  letter-spacing: -2px;
+  max-width: 100px;
+}
+h1:after, .food h6:after {
+  content: "™";
+  font-size: 1rem;
+  vertical-align: super;
+  margin-left: 0.192rem;
+}
+
+.food {
+  background: #231e1e;
+  border-color: black;
+  color: white;
+  padding: 1rem;
+  min-height: 16rem;
+  position: relative;
+  max-width: 300px;
+}
+
+.food h6 {
+  position: absolute;
+  font-size: 0.8rem;
+  margin-top: 1.618rem;
+  opacity: 0.2;
+  bottom: 0.618rem;
+  left: 1rem;
+}
+.food h6:after {
+  font-size: 60%;
+  margin-left: 1px;
+}
+.food:hover {
+  cursor: pointer;
+}
+
+.row {
+  margin: 0;
+}
+
+footer {
+  text-align: center;
+  margin-top: 2rem;
+  color: silver;
+  font-size: 0.6rem;
+}
+footer .heart {
+  color:#cf2e31;
+}
+
+nav.tabs {
+  max-width: 55%;
+}
+nav.tabs a {
+  display: inline-block;
+  color: black;
+  background-color: white;
+  padding: 4px 20px;
+  margin-bottom: 24px;
+  margin-right: 1px;
+}
+nav.tabs a.active {
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+input {
+  width: 50%;
+  padding: 6px 9px;
 }
