--- a/public/templates/_logInView.html
+++ b/public/templates/_logInView.html
@@ -1,19 +1,10 @@
-<form class="form-horizontal" role="form">
-    <div class="form-group">
-        <label for="inputUsername" class="col-sm-4 control-label">Username</label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="login.email">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="inputPassword" class="col-sm-4 control-label">Password</label>
-        <div class="col-sm-4">
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="login.password">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-4 col-sm-10">
-            <button type="submit" class="btn btn-default" ng-click="logIn(login.email, login.password)">Log In</button>
-        </div>
-    </div>
+<form name="loginForm" ng-controller="LoginController"
+      ng-submit="login(credentials)" novalidate>
+  <label for="username">Username:</label>
+  <input type="text" id="username"
+         ng-model="credentials.username">
+  <label for="password">Password:</label>
+  <input type="password" id="password"
+         ng-model="credentials.password">
+  <button type="submit">Login</button>
 </form>
