--- a/public/templates/_searchView.html
+++ b/public/templates/_searchView.html
@@ -1,11 +1,12 @@
-<section id="foods" ng-controller="FoodsController as foods">
+<div class="container" ng-controller="FoodsController as foods">
 
   <div class="row">
 
-    <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="food in foods">
-        {{food.name}}
+    <div class="col-sm-6 col-md-6 col-lg-3" ng-repeat="food in foods.foodList">
+      <div name="{{food.name}}">{{food.name}}</div>
+
     </div>
 
   </div>
 
-</section>
+</div>
