--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
   <body>
     <nav class="nav-tabs">
       <a ui-sref-active="active" ui-sref="home">Home</a>
-      <a ui-sref-active="active" ui-sref="search">Search</a>
-      <a ui-sref-active="active" ui-sref="signup"></a>
+      <a ui-sref-active="active" ui-sref="signup">SignUp</a>
+      <a ui-sref-active="active" ui-sref="login">LogIn</a>
     </nav>
 
 
