added form for ratio on homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,22 +8,37 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="/javascripts/app.js"></script>
     <script src="/javascripts/foodsController.js"></script>
+    <script src="/javascripts/ratioController.js"></script>
+    <script src="/javascripts/foodProfileController.js"></script>
     <script src="/javascripts/foodView.js"></script>
 
   </head>
   <body>
     <nav class="nav-tabs">
       <a ui-sref-active="active" ui-sref="home">Home</a>
-      <a ui-sref-active="active" ui-sref="signup">SignUp</a>
-      <a ui-sref-active="active" ui-sref="login">LogIn</a>
+      <a ui-sref-active="active" ui-sref="foods">Foods</a>
+      <a ui-sref-active="active" ui-sref="restaurants">Restaurants</a>
+      <a ui-sref-active="active" ui-sref="categories">Categories</a>
     </nav>
 
 
 
+    <div ng-controller="RatioController">
+      <form novalidate class="simple-form" ng-hide="submitted">
+        How many carbs per 1 unit of insulin?<input type="number" ng-model="insulin.ratio" /><br />
+        <input type="button" ng-click="reset()" value="Reset" />
+        <input type="submit" ng-click="update(insulin)" value="Save" />
+      </form>
+
+      <h3 ng-show="vis">Your ratio is: {{}} </h3>
+
+     </div>
+
+    <div>
+
       <section ui-view></section>
 
-
-   </div>
+    </div>
 
   <footer>
     <p>Copyright Preston Watson 2016</p>
