--- a/public/templates/_categoryView.html
+++ b/public/templates/_categoryView.html
@@ -3,11 +3,8 @@
   <div class="row">
 
     <div class="col-sm-6 col-md-6 col-lg-3" ng-repeat="food in foods.foodList">
-      <a ui-sref="foods.view">
-      <div name="{{food.name}}">{{food.name}}
-      <br>
-      {{food.carbs}}</div>
-      </a>
+      <div name="{{food.category}}">{{food.category}}</div>
+
     </div>
 
   </div>
