--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         <input type="submit" ng-click="update(insulin)" value="Save" />
       </form>
 
-      <h3 ng-show="vis">Your ratio is: {{}} </h3>
+      <h3 ng-show="vis">Your ratio is: {{ratioFactory.ratio}} </h3>
 
      </div>
 
