successfuly pushing ratio to html

--- a/public/templates/_searchView.html
+++ b/public/templates/_searchView.html
@@ -6,7 +6,9 @@
       <a ui-sref="foods.view">
       <div name="{{food.name}}">{{food.name}}
       <br>
-      {{food.carbs}}</div>
+      {{food.carbs}}
+      You need to do {{}}
+      </div>
       </a>
     </div>
 
