successfully showing ratio for each food after entering ratio data

--- a/public/templates/_searchView.html
+++ b/public/templates/_searchView.html
@@ -7,7 +7,7 @@
       <div name="{{food.name}}">{{food.name}}
       <br>
       {{food.carbs}}
-      You need to do {{}}
+      You need to do {{food.ratio}}
       </div>
       </a>
     </div>
