--- a/public/templates/_homeView.html
+++ b/public/templates/_homeView.html
@@ -1,15 +1,14 @@
-<h3>Popular Foods:</h3>
-
-<div class="container" ng-controller="FoodsController as foods">
-
-  <div class="row">
-
-    <div class="col-sm-6 col-md-6 col-lg-3" ng-repeat="food in foods.foodList">
-      <div name="{{food.name}}">{{food.name}}</div>
-
+<div class="container home" ng-controller="FoodsController as foods">
+  <h3>POPULAR:FOODS</h3>
+  <div class="row home-row">
+    <div class="col-sm-6 col-md-6 col-lg-3 home-foods" ng-repeat="food in foods.foodList">
+      <div name="{{food.name}}"><p class='home-food-name'>{{food.name}}</p></div>
     </div>
 
-  </div>
 
+  </div>
+    <a ui-sref="foods">
+      <button class="more-foods">MORE FOODS</button>
+    </a>
 </div>
 
