--- a/public/templates/_searchView.html
+++ b/public/templates/_searchView.html
@@ -1,17 +1,45 @@
 <div class="container" ng-controller="FoodsController as foods">
 
   <div class="row">
-
-    <div class="col-sm-6 col-md-6 col-lg-3" ng-repeat="food in foods.foodList">
-      <a ui-sref="foods.view">
-      <div name="{{food.name}}">{{food.name}}
-      <br>
-      {{food.carbs}}
-      You need to do {{food.ratio}}
-      </div>
-      </a>
+    <div class="search">
+      <input type="search" ng-model="q" placeholder="filter foods..." aria-label="filter foods" />
     </div>
-
+    <ul class="example-animate-container list">
+      <li class="animate-repeat col-sm-6 col-md-6 col-lg-4" ng-repeat="food in foods.foodList | filter:q as results">
+          <div class='food' name="{{food.name}}">
+            <a ui-sref="foods.view">
+              <h4>{{food.name}}</h4>
+            </a>
+            <br>
+              <h6>{{food.restaurant}}</h6>
+            <br>
+              <p>There are {{food.carbs}} carbs in a {{food.name}}</p>
+            <br>
+              <p>Based on your ratio, you will need to do <span id="personal">{{food.ratio}} units</span> of insulin for this food.</p>
+          </div>
+      </li>
+      <li class="animate-repeat" ng-if="results.length == 0">
+        <strong>No results found...</strong>
+      </li>
+    </ul>
   </div>
 
 </div>
+
+
+
+<!-- <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="food in foods.foodList">
+<a ui-sref="foods.view">
+<div class='food' name="{{food.name}}">
+<h4>{{food.name}}</h4>
+</a>
+<br>
+<h6>{{food.restaurant}}</h6>
+<br>
+<p>There are {{food.carbs}} carbs in a {{food.name}}</p>
+<br>
+<p>Based on your ratio, you will need to do {{food.ratio}} units of insulin for this food.</p>
+</div>
+-->
+<!--  </div> -->
+
