--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -129,22 +129,21 @@ h1:after, .food h6:after {
 }
 
 .food {
-  background: #1695A3;
-  border-color: black;
+  background: white;
+  border: 3px solid #212B40;
   color: white;
   padding: .7rem;
   min-height: 16rem;
   position: relative;
   max-width: 300px;
-  border-bottom: 2px solid white;
   margin-top: 20px;
-  height: 325px;
+  height: 300px;
 }
 
 .food h6 {
   font-size: 0.8rem;
   opacity: 0.6;
-/*  left: 1rem;*/
+  color: #547B97;
 }
 .food h6:after {
   font-size: 60%;
@@ -196,7 +195,7 @@ input {
 }
 
 .nav-tabs a{
-  margin-left: 20px;
+  margin-left: 0px;
   font-family: 'montserratsemi_bold';
   color: #00C3A9;
   border: 1px solid white;
@@ -204,7 +203,7 @@ input {
 }
 
 .nav-tabs a:hover{
-  margin-left: 20px;
+  margin-left: 0px;
   font-family: 'montserratsemi_bold';
   color: white;
   background-color: #00C3A9;
@@ -220,9 +219,10 @@ input {
 }
 
 h4.ng-binding {
-  color: #EB7F00;
-
-
+  color: #212B40;
+  font-family: 'montserratsemi_bold';
+  text-transform: uppercase;
+  font-size: 18px;
 }
 
 .home-food-name {
@@ -238,7 +238,7 @@ form {
 }
 
 form .buttons {
-  width: 10%;
+  width: 150px;
   background-color: #547B97;
   margin-left: 10px;
   margin-right: 10px;
@@ -249,7 +249,7 @@ form .buttons {
 }
 
 form .buttons:hover {
-  width: 10%;
+  width: 150px;
   background-color: white;
   margin-left: 10px;
   margin-right: 10px;
@@ -269,6 +269,13 @@ form .buttons:hover {
 
 #personal {
   font-weight: bold;
+  color: #00C3A9;
+  border: 2px solid #00C3A9;
+  margin-top: 0px;
+  width: 125px;
+  margin-bottom: 8px;
+  padding: 5px;
+  font-family: 'montserratsemi_bold';
 }
 
 .input-field{
@@ -302,7 +309,7 @@ input[type=number]::-webkit-outer-spin-button {
 .carb-form {
   background-color: #547B97;
   text-align: center;
-  height: 375px;
+  height: 400px;
   border-top: 1px solid #212B40;
   border-bottom: 2px solid #212B40;
 }
@@ -327,10 +334,6 @@ input[type=number]::-webkit-outer-spin-button {
 img{
   height: 75px;
   }
-
-.home {
-/**/
-}
 
 .home h3 {
   color: #212B40;
@@ -390,11 +393,44 @@ img{
   margin: auto;
 }
 
-/*input[type="search"]::webkit-input-placeholder {*/
 [type="search"] {
     -webkit-appearance: textfield;
     color: #00C3A9;
     border: 2px solid #BADCDD;
+    margin-left: 25px;
+}
+
+.food-carbs {
+  color: #00C3A9;
+}
+
+.food-blurb {
+  color: #212B40;
+  font-size: 13px;
+  font-family: 'montserratsemi_bold';
+}
+
+.personal-ratio-div {
+  width: 120px;
+  margin: auto;
+}
+
+#your-ratio {
+  text-decoration: underline;
+}
+
+.foods-button-index {
+  font-family: 'montserratsemi_bold';
+  color: white;
+  border: 1px solid white;
+  background-color: #547B97;
+}
+
+.foods-button-index:hover {
+  font-family: 'montserratsemi_bold';
+  color: #547B97;
+  border: 1px solid #547B97;
+  background-color: white;
 }
 
 
