--- a/public/templates/_searchView.html
+++ b/public/templates/_searchView.html
@@ -5,17 +5,19 @@
       <input type="search" ng-model="q" placeholder="filter foods..." aria-label="filter foods" />
     </div>
     <ul class="example-animate-container list">
-      <li class="animate-repeat col-sm-6 col-md-6 col-lg-4" ng-repeat="food in foods.foodList | filter:q as results">
+      <li class="individual-foods animate-repeat col-sm-6 col-md-6 col-lg-4" ng-repeat="food in foods.foodList | filter:q as results">
           <div class='food' name="{{food.name}}">
             <a ui-sref="foods.view">
               <h4>{{food.name}}</h4>
             </a>
-            <br>
               <h6>{{food.restaurant}}</h6>
             <br>
-              <p>There are {{food.carbs}} carbs in a {{food.name}}</p>
-            <br>
-              <p>Based on your ratio, you will need to do <span id="personal">{{food.ratio}} units</span> of insulin for this food.</p>
+              <p class='food-blurb'>There are <span class="food-carbs">{{food.carbs}} carbs </span>in a {{food.name}}</p>
+              <p class='food-blurb'>Based on your ratio, you will need to do </p>
+              <div class='personal-ratio-div'>
+              <p id="personal">{{food.ratio}} units</p>
+              </div>
+              <p class='food-blurb'>of insulin for this food.</p>
           </div>
       </li>
       <li class="animate-repeat" ng-if="results.length == 0">
